ZumZumFinancials_Dev1/src/objects/Time_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Month__c</fullName>
        <defaultValue>MONTH( TODAY() )</defaultValue>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <summarizedField>Time_Sheet_Detail__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Time_Sheet_Detail__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year_String__c</fullName>
        <formula>TEXT( Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <defaultValue>YEAR( TODAY() )</defaultValue>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Time Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Year_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Time Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>